responsive issue solving

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,9 +13,9 @@
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Produits</a>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">Badol Pay</a></li>
-      <li><a class="dropdown-item" href="/souf/">Badol Souf</a></li>
-      <li><a class="dropdown-item" href="#">Badol </a></li>
+      <li><a class="dropdown-item" href="#">Pay</a></li>
+      <li><a class="dropdown-item" href="/souf/">Souf</a></li>
+      <li><a class="dropdown-item" href="#">Teka </a></li>
     </ul>
   </li>
   <li class="nav-item">
