--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "fr-FR" }}">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, 
+    user-scalable=0">
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <!-- CSS only -->
